--- a/styles.css
+++ b/styles.css
@@ -28,28 +28,16 @@ body {
     justify-content: space-around;
 }
 
-.tracks {
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-}
-
-.track {
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: white;
-    border: 1px solid #ccc;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+#waveform {
+    margin: 20px;
+    height: 200px;
+    background-color: #ddd;
 }
 
 .track-controls {
+    padding: 10px;
     display: flex;
-    gap: 10px;
-}
-
-.track-controls button {
-    padding: 5px 10px;
-    cursor: pointer;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #ccc;
 }
